--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,73 @@
 .App {
   background-color: black;
   height: fit-content;
-  width: fit-content;
 }
 
 .header {
   padding-left: 30px;
-  color: white;
-  overflow-x: hidden;
-  position: fixed;
+  padding-right: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-wrapper {
+  width: 18rem;
 }
 
 .header-one {
   border-left: 5px solid #f5c518;
   padding-left: 5px;
+  color: white;
+  width: 100%;
 }
 
 .header-two {
   color: grey;
+  width: 100%;
+}
+
+.header-search-button {
+  margin-top: 30px;
+  height: 40px;
+  width: 50%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.active {
+  box-shadow: inset 0 0 0 2px #f5c518;
+} /* same as className={`header-search-button ${searchActive && "active"}`}*/
+
+.input-movie {
+  margin-left: 10px;
+  margin-top: 2px;
+  height: 30px;
+  width: 85%;
+  font-size: medium;
+  border: none;
+  outline: none;
 }
 
 .movies {
   display: flex;
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 100px;
+  padding-top: 60px;
   color: white;
-  height: 460px;
-  width: fit-content;
+  overflow-x: auto;
+}
+
+.submit-search {
+  border: transparent;
+  background-color: white;
+  cursor: pointer;
+  position: absolute;
+  margin-top: 10px;
+}
+
+.movie-not-found {
+  color: white;
+  padding: 15% 0 0 38%;
+  font-size: xx-large;
+  font-weight: bold;
 }
