--- a/client/src/Movie/Movie.css
+++ b/client/src/Movie/Movie.css
@@ -1,16 +1,12 @@
 .moving-picture {
   width: 200px;
-  margin-bottom: 40px;
-  margin-top: 20px;
+  margin: 20px 20px 40px 0px;
 }
 
 .movie_specifications {
   height: 180px;
   width: 140px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
   border-style: solid;
   background-color: #1a1a1a;
   border-color: black;
